--- a/src/components/translation/en.json
+++ b/src/components/translation/en.json
@@ -2,5 +2,6 @@
   "edit": "Edit",
   "app": "App.tsx",
   "description": " to change this screen and then come back to see your edits.",
-  "read_the_docs": "Read the docs to discover what to do next:"
+  "read_the_docs": "Read the docs to discover what to do next:",
+  "placeholder": "Enter message"
 }
